kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80 # Внутри контейнера. Автоматом открывается на поде
          name: nginx-port
        volumeMounts:
        - name: workdir # в поде (хосте). Имя монтируемого тома
          mountPath: /usr/share/nginx/html # Директория внутри контейнера
        livenessProbe:
          httpGet:
            port: 80
            path: /index.html
          initialDelaySeconds: 5
          periodSeconds: 5
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm /homework/index.html"]
      # nodeSelector:
      #   homework: "true"
      dnsPolicy: Default
      volumes:
      - name: workdir
        emptyDir: {} # Том, который живет внутри ПОДА, который доступен для всех контейнеров
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 1
