kubernetes-networks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /index.html # любой запрос на path будет переписан на вот этот
spec:
  rules:
  - host: "homework.otus" # На какой домен маршурутизируется
    http:
      paths:
      - pathType: Prefix
        path: "/homepage" # путь на поде, до которого пойдет запрос
        backend:
          service:
            name: homework-service
            port:
              number: 80
